@@ -14,6 +14,8 @@ define('IMAGEPICKER_ORIG_DIR', 'orig');
 define('IMAGEPICKER_WATERMARK_DIR', 'watermarks');
 define('IMAGEPICKER_ADMIN_PATH', 'admin/settings/imagepicker');
 define('IMAGEPICKER_PATH', drupal_get_path('module', 'imagepicker'));
+// Minimum PHP version for extension
+define('IMAGEPICKER_UPLOAD_STATUS_MIN_PHP', '5.2.1');
 
 /**
  * Implementation of hook_help().
@@ -101,6 +103,12 @@ function imagepicker_menu() {
     'page callback'    => 'imagepicker_box',
     'access arguments' => array('access content'),
     'type'             => MENU_CALLBACK
+  );
+  // uploadprogress callback
+  $items['imagepicker/progress'] = array(
+    'page callback' => 'imagepicker_uploadprogress_callback',
+    'access arguments' => array(TRUE),
+    'type' => MENU_CALLBACK,
   );
   // admin settings
   $items[IMAGEPICKER_ADMIN_PATH] = array(
@@ -3511,5 +3519,34 @@ function imagepicker_box() {
   print $output;
   exit;
 
+}
+
+/**
+ * callback for uploadprogress information function.
+ */
+function imagepicker_uploadprogress_callback($progress_key='') {
+
+  if (! $progress_key) {
+    $progress_key = $_GET['key'];
+  }
+
+  if (variable_get('imagepicker_uploadprogress_server', '') && function_exists('uploadprogress_get_info') && $progress_key) {
+    $status = uploadprogress_get_info($progress_key);
+    if ($status['bytes_total']) {
+      $status['status'] = 1;
+      $status['percentage'] = round($status['bytes_uploaded']/$status['bytes_total'] * 100, 0);
+      $eta = sprintf("%02d:%02d", $status['est_sec'] / 60, $status['est_sec'] % 60 );
+      $speed = _imagepicker_bkmg($status['speed_average']);
+      $status['message'] = t('!eta left at !speed/sec', array('!eta' => $eta, '!speed' => $speed));
+    }
+    else {
+      $status['status'] = 1;
+      $status['percentage'] = -1;
+      $status['message'] = 'Uploading';
+    }
+    echo json_encode($status);
+  }
+
+  exit;
 }
 
